# microservices-demo

./: skaffold.yaml
src/adservice/: Dockerfile  build.gradle
src/cartservice/src/: Dockerfile
src/checkoutservice/: Dockerfile
src/currencyservice/: Dockerfile
src/emailservice/: Dockerfile  pyproject.toml  requirements.txt
src/frontend/: Dockerfile
src/loadgenerator/: Dockerfile
src/paymentservice/: Dockerfile
src/productcatalogservice/: Dockerfile
src/recommendationservice/: Dockerfile  pyproject.toml  requirements.txt
src/shippingservice/: Dockerfile
