[tool.poetry]
name = "emailservice"
version = "0.1.0"
description = ""
authors = ["Zach Piazza <z.piazza@combocurve.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-core = "^2.15.0"
grpcio-health-checking = "^1.60.0"
grpcio = "^1.60.0"
jinja2 = "^3.1.3"
python-json-logger = "^2.0.7"
google-cloud-profiler = "^4.1.0"
google-cloud-trace = "^1.12.0"
requests = "^2.31.0"
opentelemetry-distro = "^0.43b0"
opentelemetry-instrumentation-grpc = "^0.43b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.22.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
